--- a/Backend/authify/src/main/resources/application.properties
+++ b/Backend/authify/src/main/resources/application.properties
@@ -13,8 +13,8 @@ server.servlet.context-path=/api/v1.0
 #java mail sender configuration using brevo
 spring.mail.host=
 spring.mail.port= 
-spring.mail.username= 
-spring.mail.password= 
+spring.mail.username= test
+spring.mail.password= test
 spring.mail.properties.mail.smtp.auth= true
 spring.mail.properties.mail.smtp.starttls.enable= true
 spring.mail.protocol= smtp
