--- a/Backend/authify/src/main/resources/application.properties
+++ b/Backend/authify/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=authify
 
 spring.datasource.url=jdbc:mysql://localhost:3306/authify_app
-spring.datasource.username=root
-spring.datasource.password=@Jay2807
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 
@@ -11,12 +11,12 @@ jwt.secret.key = thisisthesecretkeyievercreatedinmydevelopmentcareer
 server.servlet.context-path=/api/v1.0
 
 #java mail sender configuration using brevo
-spring.mail.host= smtp-relay.brevo.com
-spring.mail.port= 587
-spring.mail.username= 94d92b001@smtp-brevo.com
-spring.mail.password= d30LaMgpJFRrwIG5
+spring.mail.host=
+spring.mail.port= 
+spring.mail.username= 
+spring.mail.password= 
 spring.mail.properties.mail.smtp.auth= true
 spring.mail.properties.mail.smtp.starttls.enable= true
 spring.mail.protocol= smtp
-spring.mail.properties.mail.smtp.from= kolhejay28@gmail.com
+spring.mail.properties.mail.smtp.from=
 
